feat: 신고 도메인 컨트롤러, 서비스 추가 및 네이버 클로바 stt API 테스트

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'io.github.cdimascio:dotenv-kotlin:6.5.1'
+    testImplementation 'io.projectreactor:reactor-test'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
