--- a/src/main/resources/application-database.yml
+++ b/src/main/resources/application-database.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/safebridge?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
-    password: gusdn4818
+    password: 20010310
   jpa:
     open-in-view: true
     hibernate:
