--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     implementation 'org.ahocorasick:ahocorasick:0.6.3'
+    implementation 'com.google.cloud:google-cloud-translate:2.6.0'
 }
 
 tasks.named('test') {
