--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - dev
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -23,7 +24,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
       
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -x test
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -35,18 +36,14 @@ jobs:
         id: set-tag
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
-            echo "TAG=latest" >> $GITHUB_OUTPUT
-            echo "CONTAINER_NAME=safe-bridge-backend" >> $GITHUB_OUTPUT
+            echo "TAG=latest" >> $GITHUB_ENV
           else
-            echo "TAG=dev" >> $GITHUB_OUTPUT
-            echo "CONTAINER_NAME=safe-bridge-test" >> $GITHUB_OUTPUT
+            echo "TAG=dev" >> $GITHUB_ENV
           fi
 
       - name: Build & Push Docker Image
-        env:
-          TAG: ${{ steps.set-tag.outputs.tag }}
         run: |
-          docker buildx build --platform linux/amd64 -t bingle625/gdg-cau-team5-backend:$TAG --push .
+          docker buildx build --platform linux/amd64 -t bingle625/gdg-cau-team5-backend:${{ env.TAG }} --push .
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.7
@@ -55,14 +52,16 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            echo "Deploying container: ${{ steps.set-tag.outputs.container_name }} with tag: ${{ steps.set-tag.outputs.tag }}"
-            docker stop ${{ steps.set-tag.outputs.container_name }} || true
-            docker rm ${{ steps.set-tag.outputs.container_name }} || true
+            cd ~/DOMAINS/safe-bridge
             
-            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/gdg-cau-team5-backend:${{ steps.set-tag.outputs.tag }}
-            
-            if [[ "${{ steps.set-tag.outputs.tag }}" == "latest" ]]; then
-              docker run -d --name safe-bridge-backend -p 8080:8080 bingle625/gdg-cau-team5-backend:latest
-            else
-              docker run -d --name safe-bridge-test -p 8081:8080 bingle625/gdg-cau-team5-backend:dev
-            fi
+            # 최신 이미지 pull
+            docker-compose pull
+
+            # 기존 컨테이너 중지 및 삭제
+            docker-compose down
+
+            # 새로운 컨테이너 실행
+            docker-compose up -d
+
+            # 실행 중인 컨테이너 확인
+            docker ps
