--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,9 @@ out/
 .vscode/
 
 # dotenv
-.env
+src/main/resources/.env
 **/application-database.yml
-
+**/application.yml
 
 # dotenv
-.env
+src/main/resources/.env
