--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -21,3 +21,17 @@ spring:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
       timeout: 6
+
+google:
+  service-account:
+    type: ${GOOGLE_TYPE}
+    project_id: ${GOOGLE_PROJECT_ID}
+    private_key_id: ${GOOGLE_PRIVATE_KEY_ID}
+    private_key: ${GOOGLE_PRIVATE_KEY}
+    client_email: ${GOOGLE_CLIENT_EMAIL}
+    client_id: ${GOOGLE_CLIENT_ID}
+    auth_uri: ${GOOGLE_AUTH_URI}
+    token_uri: ${GOOGLE_TOKEN_URI}
+    auth_provider_x509_cert_url: ${GOOGLE_AUTH_PROVIDER_URL}
+    client_x509_cert_url: ${GOOGLE_CLIENT_URL}
+    universe_domain: ${GOOGLE_DOMAIN}
