feat: 유저 회원가입, 로그인 기능

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -49,3 +49,6 @@ logging:
       file-name-pattern: my-app-%d{yyyy-MM-dd}.log.gz
   file:
     name: /var/log/server.log
+
+auth:
+  secretKey: ${JWT_SECRET_KEY}
