--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,13 @@ dependencies {
     implementation 'org.ahocorasick:ahocorasick:0.6.3'
     implementation 'com.google.cloud:google-cloud-translate:2.6.0'
     implementation 'io.netty:netty-resolver-dns-native-macos:4.1.108.Final'
+
+    //jwt
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+
+    // bcrypt
+    implementation 'org.springframework.security:spring-security-crypto'
 }
 
 tasks.named('test') {
