feat: Redis 수정 로직은 TX 내부에 있어선 안 된다. 롤백 오류가 날 수도 있기 때문에 TX 커밋 이후 이벤트 리스너로 처리해준다

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -7,7 +7,7 @@ spring:
     username: ${MYSQL_DB_USER}
     password: ${MYSQL_DB_PASS}
   jpa:
-    open-in-view: true
+    open-in-view: false
     hibernate:
       ddl-auto: update
     show-sql: true
