feat: Virtual Thread 도입 및 스케줄링은 Spring에서 Pool을 생성해서 쓰기 때문에 도입하지 않는다

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -22,6 +22,10 @@ spring:
       port: ${REDIS_PORT}
       timeout: 6
 
+  threads:
+    virtual:
+      enabled: true
+
 google:
   service-account:
     type: ${GOOGLE_TYPE}
