feat: 쿼리 최적화 및 인덱스 생성 완료

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -46,6 +46,7 @@ logging:
     file: "[%d{yyyy-MM-dd HH:mm:ss.SSS}][%-5level][%logger.%method:line%line] - %msg%n"
   level:
     com.example.log: debug
+    org.springframework.jdbc: debug
   logback:
     rollingpolicy:
       max-file-size: 10MB
